2.1.33 (unreleased)
-------------------

- Nothing changed yet.


2.1.32 (2014-07-07)
-------------------

- quality report round down to 1 decimal [amleczko]


2.1.31 (2014-07-03)
-------------------

- fix add time entry modal dialog [amleczko]
- fix report index [amleczko]
- show all projects in report, not only active [amleczko]
- fix json export from reports [amleczko]


2.1.30 (2014-07-03)
-------------------

- fix project wizard form to avoid creation empty tickets [amleczko]
- new quality report: we vs. customer [amleczko]
- searchable milestones [amleczko]
- use dismax parser [amleczko]
- integrate sql search in solr [amleczko]
- fix transaction handling when working with trac [amleczko]
- make sure contract field is visible and required [amleczko]
- add filters to time entries migrate [amleczko]
- fix bug with multi schema select [amleczko]
- cleanup newrelic [amleczko]
- fix bug in fastticketing [amleczko]
- fix bug in wizard [amleczko]

2.1.20 (2014-02-05)
-------------------

- fix paths [amleczko]
- remove outstanding tickets [amleczko]
- fix icons [amleczko]
- add user stats [amleczko]
- add default form actions [amleczko]
- simplify angularjs integration [amleczko]
- fix redis pub/sub [amleczko]
- include feedly notifications [amleczko]
- add redis kanbanboard support [amleczko]
- fixes to kanbanboard [amleczko]
- performance fixes for my_time_entries report [amleczko]
- fix search after moving to new deform [amleczko]
- fixes for migrate form [amleczko]


2.1.10 (2014-01-20)
-------------------

- fix change_state problem in estimations tab [amleczko]
- fix tekken `done` column [amleczko]
- add user costs [amleczko]
- small bug fixing [amleczko]
- new fields for quality report [amleczko]
- removes deprecated function get_user_by_login [amleczko]
- upgrade to deform 0.9.9 [amleczko]
- make project related chosen field more automatic [amleczko]
- add quick link to reports from tekken [amleczko]
- add proper HTML title tag [amleczko]